--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.2.3",
+    "bootstrap": "^5.3.0-alpha1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
