--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "axios": "^1.2.3",
     "bootstrap": "^5.3.0-alpha1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vuetify": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
