--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.0-alpha1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-router": "^4.1.6",
     "vuetify": "^3.1.2"
   },
   "devDependencies": {
