--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.2.3",
     "bootstrap": "^5.3.0-alpha1",
     "core-js": "^3.8.3",
+    "pinia": "^2.0.29",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
     "vuetify": "^3.1.2"
