--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "core-js": "^3.8.3",
     "pinia": "^2.0.29",
     "vue": "^3.2.13",
-    "vue-router": "^4.1.6",
+    "vue-router": "4.0.13",
     "vuetify": "^3.1.2"
   },
   "devDependencies": {
