--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-router": "^4.2.4",
     "vuetify": "^3.3.10"
   },
   "devDependencies": {
