--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-3-onbording",
+  "name": "study-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,13 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^1.2.3",
-    "bootstrap": "^5.3.0-alpha1",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
     "core-js": "^3.8.3",
-    "pinia": "^2.0.29",
+    "pinia": "^2.1.6",
     "vue": "^3.2.13",
-    "vue-router": "4.0.13",
-    "vuetify": "^3.1.2"
+    "vue-router": "^4.2.4",
+    "vuetify": "^3.3.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
